# nisa

./: .gitignore  App.tsx  README.md  convert_data.cjs  index.css  index.html  installer.nsi  package-lock.json  package.json  reset_db.sql  tailwind.config.cjs  types.ts  urunler.csv
.claude/: settings.local.json
api-server/: Cargo.toml  run.sh
backend-node/: .gitignore  gen_hash.js  hash_password.js  index.js
backend-node/routes/: auth.js
barkodv2-main/: App.tsx  build_release.bat  dev.bat  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
barkodv2-main/api-server/: .gitignore  run.bat
barkodv2-main/components/: CreditPage.tsx  Dashboard.tsx  DatabaseViewer.tsx  InventoryList.tsx  LoginPage.tsx  ScannerMode.tsx  Settings.tsx  Sidebar.tsx  TransactionsPage.tsx  UserManagement.tsx
components/: ActivationPage.tsx  BulkPriceUpdate.tsx  ChangePasswordModal.tsx  CreateCurrentAccount.tsx  CreateProductGroup.tsx  CreateStockCard.tsx  CustomerStatement.tsx  DailyCashReport.tsx  Dashboard.tsx  ExpensesPage.tsx  FinancePage.tsx  GoodsReceipt.tsx  GoodsReceiptHistory.tsx  InventoryList.tsx  LoginPage.tsx  ProductHistory.tsx  ScannerMode.tsx  Settings.tsx  Sidebar.tsx  StockCardHistory.tsx  SyncStatusIndicator.tsx  TransactionsPage.tsx  UserManagement.tsx
services/: accessCodeService.ts  cloudService.ts  financeService.ts  geminiService.ts  inventoryService.ts  licenseService.ts  printService.ts  tauriService.ts
src-tauri/: Cargo.toml  build_err.txt  check_error.txt  check_error_2.txt  check_error_3.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  models.rs  security_tests.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/cloud/: mod.rs
src-tauri/src/database/: connection.rs
src-tauri/src/security/: mod.rs  validation.rs
src-tauri/src/services/: backup.rs  inventory.rs  mod.rs  print.rs  scanner.rs  startup.rs  sync.rs  updater.rs
src/context/: LicenseContext.tsx  (+1 more)
web/: .env.example  .env.production  App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts
(+45 files in other folders)
