[package]
name = "nexus-api-server"
version = "0.1.0"
edition = "2021"
description = "Mock API server for Nexus Inventory license and cloud sync"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
env_logger = "0.10"
log = "0.4"
