[package]
name = "nexus-inventory"
version = "1.0.0"
description = "Nexus Inventory Management System"
authors = ["Developer"]
edition = "2021"

[lib]
name = "nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite with bundled and backup support
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Connection pooling for SQLite
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Password hashing (Argon2)
argon2 = "0.5"
rand = "0.8"

# Better error handling
anyhow = "1.0"

# LRU Cache
lru = "0.12"

# App data directories
directories = "5"

# Windows Registry (for startup management)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# Existing dependencies
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# HTTP client for API calls (license & cloud sync)
reqwest = { version = "0.11", features = ["json", "multipart", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }

# MAC address detection
mac_address = "1.1"

# SHA256 checksum for cloud backup
sha2 = "0.10"

# Base64 encoding
base64 = "0.21"

# Hostname detection
hostname = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = false
opt-level = 3
strip = false
